codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupt_exec_marks_failed.snap
---
source: tui/src/chatwidget/tests/review_mode.rs
assertion_line: 1131
expression: exec_blob
---
• Ran sleep 1
  └ ✗ failed (exit 1) • 0ms
