codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupt_preserves_unified_exec_wait_streak.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: snapshot
---
cells=2
▸ Terminal: just fix · 1 interaction · completed in 5ms · Ctrl+T details


■ Conversation interrupted - tell the model what to do differently. Something went wrong? Hit `/feedback` to report the issue.
