codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_app_server_command_output_delta_transcript.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: lines_to_single_string(&transcript)
---
• Running printf 'stdout\nstderr\n'
  └ stdout
    stderr
