codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__long_hook_context_is_truncated_with_transcript_hint.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: history
---
• SessionStart hook (stopped)
  hook context: This hook context is intentionally long enough to wrap acro...
  stop: The hook stopped this turn for an important reason. This second lin...
  ... more hook output (ctrl + t to view transcript)
